@@ -92,3 +92,4 @@ Changes in version 1.9.x
 + Faith index: bugfix
 + runRDA bugfix: vegan::dbrda and vegan::vegdist have different parameter for dissimilarity --> taken into account
 + Add support for Metaphlan v2
++ loadFromHumann: Improved speed
